# ros2-mini-car

./: .env  .gitignore  Dockerfile  NOTE.md  Note.md  README.md
.github/workflows/: ci.yml
ros2-jazzy/: .env  Dockerfile
ros2-jazzy/scripts/: build-docker-image.sh  build-package.sh  cleanup.sh  docker-it.sh  pull-ghcr.sh  run.sh
ros2-jazzy/src/mini_car_description/: CMakeLists.txt  package.xml
ros2-jazzy/src/mini_car_description/rviz/: mini_car.rviz
ros2-jazzy/src/mini_car_gazebo/config/: ros2_control.yaml  scan_bridge.yaml
ros2-jazzy/src/mini_car_gazebo/launch/: gazebo_ackermann.launch.py
ros2-lyrical/: .env
ros2-lyrical/scripts/: build-docker-image.sh  build-package.sh  docker-it.sh  pull-ghcr.sh  run.sh
ros2-lyrical/src/mini_car_controller/: CMakeLists.txt  package.xml
ros2-lyrical/src/mini_car_controller/src/: ackermann_controller.cpp
ros2-lyrical/src/mini_car_description/launch/: display.launch.py
ros2-lyrical/src/mini_car_gazebo/: CMakeLists.txt  package.xml
ros2-lyrical/src/mini_car_gazebo/launch/: gazebo.launch.py
ros2-lyrical/src/mini_car_gazebo/test/: test_ros2_control_config.py
ros2-lyrical/src/mini_car_gazebo/worlds/: empty.sdf  empty.world  puzzle.sdf
scripts/: build-docker-image.sh  build-package.sh  cleanup.sh  docker-it.sh  pull-ghcr.sh  run.sh
src/mini_car/: CMakeLists.txt  package.xml
src/mini_car/src/: simple_controller.cpp
src/mini_car_controller/: CMakeLists.txt  package.xml
src/mini_car_controller/include/mini_car_controller/: twist_conversion.hpp
src/mini_car_controller/src/: ackermann_controller.cpp  cmd_vel_adapter.cpp  twist_conversion.cpp
src/mini_car_controller/test/: test_twist_conversion.cpp
src/mini_car_description/: package.xml
src/mini_car_description/launch/: display.launch.py
src/mini_car_description/rviz/: gazebo_ackermann.rviz
src/mini_car_description/urdf/: mini_car.urdf.xacro
src/mini_car_gazebo/: package.xml
src/mini_car_gazebo/launch/: gazebo.launch.py  gazebo_ackermann.launch.py
src/mini_car_gazebo/test/: test_ros2_control_config.py
